--- a/pod.yml
+++ b/pod.yml
@@ -7,7 +7,7 @@ metadata:
 spec:
   containers:
   - name: hello-openshift
-    image: image-registry.openshift-image-registry.svc:5000/default/hello-openshift
+    image: image-registry.openshift-image-registry.svc:5000/<your_namespace>/hello-openshift
     env:
       # learn about the downward api https://kubernetes.io/docs/tasks/inject-data-application/environment-variable-expose-pod-information/#the-downward-api
     - name: HELLO
@@ -16,5 +16,5 @@ spec:
           fieldPath: metadata.name
     ports:
     - name: web
-      containerPort: 8080
+      containerPort:
       protocol: TCP
