--- a/answer-key/pod.yml
+++ b/answer-key/pod.yml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: helloworld
+  name: hello-openshift
   labels:
-    app: helloworld
+    app: hello-openshift
 spec:
   containers:
-  - name: helloworld
+  - name: hello-openshift
     image: image-registry.openshift-image-registry.svc:5000/jpicarazzi/hello-openshift
     env:
       # learn about the downward api https://kubernetes.io/docs/tasks/inject-data-application/environment-variable-expose-pod-information/#the-downward-api
@@ -18,4 +18,3 @@ spec:
     - name: web
       containerPort: 8090
       protocol: TCP
-      
