--- a/answer-key/route.yml
+++ b/answer-key/route.yml
@@ -2,14 +2,14 @@ apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   labels:
-    app: helloworld
-  name: helloworld
+    app: hello-openshift
+  name: hello-openshift-rt
 spec:
   port:
     targetPort: web
   to:
     kind: Service
-    name: helloworld
+    name: hello-openshift-svc
     weight: 100
   tls:
     termination: edge
