--- a/answer-key/svc.yml
+++ b/answer-key/svc.yml
@@ -2,16 +2,16 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: helloworld
-  name: helloworld
+    app: hello-openshift
+  name: hello-openshift-svc
 spec:
   ports:
   - name: web
     port: 80
     protocol: TCP
-    targetPort: web
+    targetPort: 8090
   selector:
-    app: helloworld
+    app: hello-openshift
   sessionAffinity: None
   #Pick from below
   type: ClusterIP
